k3s/uptimekuma/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma-svc
  namespace: monitoring
spec:
  selector:
    app: uptimekuma
  ports:
    - name: http
      port: 80
      targetPort: 3001
