k3s/uptimekuma/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: monitoring
spec:
  rules:
    - host: uptimekuma.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptimekuma-svc
                port:
                  number: 80
    - host: uptime.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptimekuma-svc
                port:
                  number: 80
